# TradeForge

./: .gitignore  CMakeLists.txt  README.md
bench/: Benchmark.cpp
docs/: Architecture.md  OrderTypes.md  Performance_Audit.md
include/core/: MatchingEngine.hpp
interview practice/: Notes.md  answer1.md  answer2.md  benchmark.md  explanation.md  question1.md  question2.md  script.md
src/core/: MatchingEngine.cpp
